<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.sf.video4j</groupId>
	<artifactId>gwt-videoplayer-core</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.sourceDirectory>src/main/java</project.build.sourceDirectory>
		<project.build.testSourceDirectory>src/test/java</project.build.testSourceDirectory>

		<gwt.version>2.5.1</gwt.version>
		<gwt-test-utils.version>0.44</gwt-test-utils.version>
		<aspectj.version>1.6.8</aspectj.version>
		<spring.version>3.1.0.RELEASE</spring.version>
		<spring-security.version>3.1.0.RELEASE</spring-security.version>
		<tiles.version>2.2.2</tiles.version>
		<slf4j.version>1.6.1</slf4j.version>
		<easymock.version>3.1</easymock.version>
		<junit.version>4.11</junit.version>
		<logback-classic.version>0.9.28</logback-classic.version>
		<jackson-mapper-asl.version>1.7.1</jackson-mapper-asl.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.1</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<excludes>
						<exclude>**/.svn/**</exclude>
					</excludes>
					<encoding>UTF-8</encoding>
					<showDeprecation>true</showDeprecation>
					<fork>false</fork>
					<showWarnings>${java.compiler.showWarnings}</showWarnings>
					<debug>${java.compiler.debug}</debug>
					<optimize>${java.compiler.optimize}</optimize>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.version}</version>
				<configuration>
					<draftCompile>true</draftCompile>
					<mode>htmlunit</mode>
					<runTarget>index.html</runTarget>
					<hostedWebapp>${webappDirectory}</hostedWebapp>
					<localWorkers>4</localWorkers>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<configuration>
							<inplace>true</inplace>
						</configuration>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<executions>
					<execution>
						<phase>pre-site</phase>
						<configuration>
							<tasks>
								<copy todir="${basedir}/src/site/resources">
									<fileset dir="${basedir}/src/main/webapp">
										<include name="gwt_*/**" />
									</fileset>
								</copy>
							</tasks>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx512M -XX:MaxPermSize=128M</argLine>
					<additionalClasspathElements>
						<additionalClasspathElement>${project.build.sourceDirectory}</additionalClasspathElement>
						<additionalClasspathElement>${project.build.testSourceDirectory}</additionalClasspathElement>
					</additionalClasspathElements>
					<useManifestOnlyJar>false</useManifestOnlyJar>
					<forkMode>always</forkMode>
					<systemProperties>
						<property>
							<name>gwt.args</name>
							<value>-out target/gwt-test</value>
						</property>
						<property>
							<name>gwt.persistentunitcache</name>
							<value>false</value>
						</property>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<site>
			<id>sourceforge</id>
			<url>scp://shell.sourceforge.net/home/project-web/video4j/htdocs</url>
		</site>
	</distributionManagement>

	<repositories>
		<repository>
			<id>com.springsource.repository.bundles.release</id>
			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
			<url>http://repository.springsource.com/maven/bundles/release</url>
		</repository>
		<repository>
			<id>com.springsource.repository.bundles.external</id>
			<name>SpringSource Enterprise Bundle Repository - External Bundle Releases</name>
			<url>http://repository.springsource.com/maven/bundles/external</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-dev</artifactId>
			<version>${gwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-servlet</artifactId>
			<version>${gwt.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<version>${gwt.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.googlecode.gwt-test-utils</groupId>
			<artifactId>gwt-test-utils</artifactId>
			<version>${gwt-test-utils.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback-classic.version}</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>${jackson-mapper-asl.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>${easymock.version}</version>
		</dependency>
	</dependencies>

</project>